--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "versa-mail",
   "version": "1.0.0",
-  "description": "template formatting",
+  "description": "Multi-Client email api",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
