--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Multi-Client email api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'Tests/*.js'",
+    "coverage": "nyc npm run test",
+    "lcov": "istanbul cover _mocha -- -R dot",
+    "lint": "eslint .",
+    "posttest": "npm run lint"
   },
   "license": "ISC",
   "keywords": [
@@ -19,5 +23,16 @@
     "@azure/communication-email": "^1.0.0",
     "axios": "^1.4.0",
     "nodemailer": "^6.9.4"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "eslint": "^8.46.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-iplayer": "^9.0.0",
+    "jest": "^29.6.2",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^15.2.0"
   }
 }
